# eta-android-animation

./: .gitignore  README.md  build.gradle  gradle.properties  run.sh
app/: build.gradle  eta-application.cabal  proguard-rules.pro
app/src/androidTest/java/com/example/jyothsnasrinivas/etaapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/eta/: Main.hs
app/src/main/eta/Com/Example/: Test.hs  Types.hs
app/src/main/java/com/example/jyothsnasrinivas/etaapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jyothsnasrinivas/etaapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
