name:                eta-application
version:             0.1.0.0
-- license-file:        LICENSE
author:              Jyothsna Srinivas
maintainer:          jyothsnasrinivas17@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  exposed-modules:     Com.Example.Test 
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       TypeOperators
                       TypeFamilies
